Integrando bora impactar no index

--- a/index.html
+++ b/index.html
@@ -286,85 +286,74 @@
   </section>
   <!-- End book section -->
 
-  <!-- Treatment section -->
-  <section class="treatment_section layout_padding">
-    <div class="side_img">
-      <img src="images/treatment-side-img.jpg" alt="">
-    </div>
+  <section class="py-5 bg-light">
     <div class="container">
-      <div class="heading_container heading_center">
-        <h2>
-          Hospital <span>Treatment</span>
-        </h2>
+      <!-- Bloco com imagem e texto em destaque -->
+      <div class="row align-items-center mb-5">
+        <div class="col-md-6">
+          <!-- Substitua o link abaixo pela URL da imagem desejada -->
+          <img src="images/brimpactar_logo.png" alt="Bora Impactar">
+        </div>
+        <div class="col-md-6">
+          <h2 class="fw-bold">Juntos com o <span class="text-primary">Bora Impactar</span></h2>
+          <p class="lead">Apoiamos o projeto Bora Impactar com ações que levam alimentos e dignidade às famílias que mais precisam. Nossa missão é transformar solidariedade em impacto real.</p>
+        </div>
       </div>
-      <div class="row">
+  
+      <!-- Seção das Ações -->
+      <div class="text-center mb-4">
+        <h3 class="fw-bold">Nossas <span class="text-primary">Ações</span></h3>
+      </div>
+      <div class="row g-4">
+        <!-- Ação 1 -->
         <div class="col-md-6 col-lg-3">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/t1.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>Nephrologist Care</h4>
-              <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
-                there isn't anything
-              </p>
-              <a href="">Read More</a>
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Arrecadação de Alimentos</h5>
+              <p class="card-text">Campanhas de coleta em mercados, escolas e empresas parceiras.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
+        <!-- Ação 2 -->
         <div class="col-md-6 col-lg-3">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/t2.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>Eye Care</h4>
-              <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
-                there isn't anything
-              </p>
-              <a href="">Read More</a>
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Distribuição Solidária</h5>
+              <p class="card-text">Entregas frequentes de cestas básicas para famílias em situação de vulnerabilidade.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
+        <!-- Ação 3 -->
         <div class="col-md-6 col-lg-3">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/t3.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>Pediatrician Clinic</h4>
-              <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
-                there isn't anything
-              </p>
-              <a href="">Read More</a>
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Parcerias com ONGs</h5>
+              <p class="card-text">Unimos forças com instituições locais para ampliar nosso alcance.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
+        <!-- Ação 4 -->
         <div class="col-md-6 col-lg-3">
-          <div class="box">
-            <div class="img-box">
-              <img src="images/t4.png" alt="">
-            </div>
-            <div class="detail-box">
-              <h4>Parental Care</h4>
-              <p>
-                alteration in some form, by injected humour, or randomised words which don't look even slightly e sure
-                there isn't anything
-              </p>
-              <a href="">Read More</}} /a>
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Educação Alimentar</h5>
+              <p class="card-text">Oficinas e palestras para promover hábitos saudáveis e sustentáveis.</p>
+              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  
+  
+  
+  
+  
   <!-- End treatment section -->
-
-
-
   <!-- End team section -->
 
   <!-- Client section -->
@@ -372,7 +361,7 @@
     <div class="container">
       <div class="heading_container">
         <h2>
-          <span>Testimonial</span>
+          <span>Depoimentos</span>
         </h2>
       </div>
     </div>
@@ -383,53 +372,43 @@
             <div class="box">
               <div class="client_info">
                 <div class="client_name">
-                  <h5>Morijorch</h5>
-                  <h6>Default model text</h6>
+                  <h5>Maria Silva</h5>
+                  <h6>Beneficiada pela iniciativa</h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover
-                many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model text,
-                and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now
-                use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                still in their infancy. Various
+                Graças às doações recebidas pelo projeto, consegui alimentar meus filhos em um momento muito difícil. Sou imensamente grata a todos que contribuem. Esse gesto de solidariedade faz toda a diferença.
               </p>
             </div>
           </div>
+  
           <div class="carousel-item">
             <div class="box">
               <div class="client_info">
                 <div class="client_name">
-                  <h5>Rochak</h5>
-                  <h6>Default model text</h6>
+                  <h5>Lucas Andrade</h5>
+                  <h6>Doador voluntário</h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
-                uncover many web sites still in their infancy. Variouseditors now use Lorem Ipsum as their default model
-                text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. editors now use
-                Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                still in their infancy.
+                Sempre quis ajudar de alguma forma, e essa plataforma me deu a oportunidade perfeita. Saber que minha contribuição chegou a quem realmente precisa me dá um enorme sentimento de propósito.
               </p>
             </div>
           </div>
+  
           <div class="carousel-item">
             <div class="box">
               <div class="client_info">
                 <div class="client_name">
-                  <h5>Brad Johns</h5>
-                  <h6>Default model text</h6>
+                  <h5>Carla Menezes</h5>
+                  <h6>Voluntária do projeto</h6>
                 </div>
                 <i class="fa fa-quote-left" aria-hidden="true"></i>
               </div>
               <p>
-                Variouseditors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
-                uncover many web sites still in their infancy, editors now use Lorem Ipsum as their default model text,
-                and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Variouseditors now
-                use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites
-                still in their infancy. Various
+                Trabalhar com a equipe e ver o impacto das doações é emocionante. Cada alimento entregue carrega esperança. Convido todos a se envolverem — juntos, conseguimos transformar vidas.
               </p>
             </div>
           </div>
@@ -437,18 +416,18 @@
         <div class="carousel_btn-box">
           <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
             <i class="fa fa-angle-left" aria-hidden="true"></i>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Anterior</span>
           </a>
           <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
             <i class="fa fa-angle-right" aria-hidden="true"></i>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Próximo</span>
           </a>
         </div>
       </div>
     </div>
   </section>
-  <!-- End client section -->
-
+  
+  
   <!-- Contact section -->
   <section class="contact_section layout_padding-bottom">
     <div class="container">
