--- a/about.html
+++ b/about.html
@@ -200,6 +200,35 @@
               </div>
             </div>
           </div>
+          <div class="item">
+            <div class="box">
+              <div class="img-box">
+                <img src="images/caio.jpg" alt="" />
+              </div>
+              <div class="detail-box">
+                <h5>
+                  CAIO
+                </h5>
+                <h6>
+                  ANALISTA
+                </h6>
+                <div class="social_box">
+                  <a href="">
+                    <i class="fa fa-facebook" aria-hidden="true"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-twitter" aria-hidden="true"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                  </a>
+                  <a href="">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
