--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">Arrecadação de Alimentos</h5>
               <p class="card-text">Campanhas de coleta em mercados, escolas e empresas parceiras.</p>
-              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
+              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
@@ -321,7 +321,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">Distribuição Solidária</h5>
               <p class="card-text">Entregas frequentes de cestas básicas para famílias em situação de vulnerabilidade.</p>
-              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
+              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
@@ -331,7 +331,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">Parcerias com ONGs</h5>
               <p class="card-text">Unimos forças com instituições locais para ampliar nosso alcance.</p>
-              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
+              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
@@ -341,7 +341,7 @@
             <div class="card-body text-center">
               <h5 class="card-title">Educação Alimentar</h5>
               <p class="card-text">Oficinas e palestras para promover hábitos saudáveis e sustentáveis.</p>
-              <a href="#" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
+              <a href="https://boraimpactar.recife.pe.gov.br/causes/5/ngos" class="btn btn-outline-primary btn-sm mt-2">Saiba Mais</a>
             </div>
           </div>
         </div>
