estilizando a tela do chatbot

--- a/chatbot.html
+++ b/chatbot.html
@@ -50,8 +50,8 @@
       color: black;
       text-align: left;
       margin-right: 20%;
-      padding: 10px;
-      border-radius: 10px 10px 10px 0;
+      padding: 20px;
+      border-radius: 0px 10px 10px 0;
       margin-bottom: 10px;
     }
     .btn-teal {
@@ -80,59 +80,42 @@
 
     <!-- Treatment Section -->
     <section class="treatment_section layout_padding">
-      <div class="side_img">
-        <img src="images/treatment-side-img.jpg" alt="Treatment Side Image">
-      </div>
       <div class="container">
         <div class="heading_container heading_center">
-          <h2>Hospital <span>Treatment</span></h2>
+          <h2>Assistente <span>Virtual</span></h2>
+          <p>Tem dúvidas sobre a plataforma ou sobre o projeto? Não se preocupe, aqui é o seu lugar de informação.</p>
         </div>
-        <div class="row">
+        <div class="row justify-content-center g-4">
           <div class="col-md-6 col-lg-3">
             <div class="box">
               <div class="img-box">
-                <img src="images/t1.png" alt="Nephrologist Care">
+                <img src="images/ciclo.jpg" alt="imagem de pessoas em um ciclo se abraçando" style="width: 300px;">
               </div>
               <div class="detail-box">
-                <h4>Nephrologist Care</h4>
-                <p>Specialized care for kidney-related conditions, ensuring comprehensive treatment and support.</p>
-                <a href="">Read More</a>
+                <h4>O que é o ciclo vida?</h4>
+                <p>Você pode perguntar a nossa assistente qualquer informação relacionada a criação e motivação do projeto, além de ter informações sobre a problemática que queremos combater.</p>            
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="box">
               <div class="img-box">
-                <img src="images/t2.png" alt="Eye Care">
+                <img src="images/pensativos.jpg" alt="Eye Care" style="width: 200px; margin-left: 25px;" >
               </div>
               <div class="detail-box">
-                <h4>Eye Care</h4>
-                <p>Advanced eye care services to maintain and improve your vision health.</p>
-                <a href="">Read More</a>
+                <h4>Como posso participar desse ciclo?</h4>
+                <p>Tem dúvidas sobre como criar pontos de coleta ou como pode ajudar um ponto existente? Tenha todas as respostas aqui.</p>
               </div>
             </div>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="box">
               <div class="img-box">
-                <img src="images/t3.png" alt="Pediatrician Clinic">
+                <img src="images/chef.jpg" alt="Pediatrician Clinic"style="width: 200px;" >
               </div>
               <div class="detail-box">
-                <h4>Pediatrician Clinic</h4>
-                <p>Comprehensive healthcare services for children, from infancy to adolescence.</p>
-                <a href="">Read More</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3">
-            <div class="box">
-              <div class="img-box">
-                <img src="images/t4.png" alt="Parental Care">
-              </div>
-              <div class="detail-box">
-                <h4>Parental Care</h4>
-                <p>Support and medical care for parents, ensuring family health and well-being.</p>
-                <a href="">Read More</a>
+                <h4>Tenho alimentos quase vencendo e não posso doar. O que faço?</h4>
+                <p>Não se preocupe, nossa assistente pode criar receitas fáceis e práticas para você fazer no dia a dia e evitar que esse alimento se estrague.</p>
               </div>
             </div>
           </div>
@@ -163,7 +146,7 @@
         <!-- Chat Input -->
         <form id="chat-form" class="chat-input-group d-flex justify-content-center">
           <input id="user-input" type="text" class="form-control w-75 rounded-start-pill" placeholder="Pergunte alguma coisa..." aria-label="Mensagem do usuário">
-          <button id="send-btn" type="submit" class="btn btn-primary rounded-end-pill">
+          <button id="send-btn" type="submit" class="btn btn-primary rounded-end-pill" style="background-color: #007bff;">
             <i class="fa fa-paper-plane" aria-hidden="true"></i>
           </button>
         </form>
