substituindo as imagens para a logo azul

--- a/cadastro.html
+++ b/cadastro.html
@@ -79,7 +79,7 @@
     <div class="container d-flex justify-content-center">
       <div class="card shadow-lg p-4" style="max-width: 900px; width: 100%; margin-top: 30px; border-radius: 20px;">
         <div class="text-center mb-4">
-          <img src="images/logo2.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
+          <img src="images/Logo blue.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
           <h3>Seja bem-vindo(a) ao Ciclo Vivo</h3>
           <p>Preencha os dados abaixo e crie sua conta</p>
         </div>
