--- a/cadastro_produto.html
+++ b/cadastro_produto.html
@@ -47,7 +47,7 @@
       <div class="card shadow-lg p-4" style="max-width: 800px; width: 100%; margin-top: 30px; border-radius: 20px;">
         <!-- Logo e título centralizados -->
         <div class="text-center mb-4">
-          <img src="images/logo2.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
+          <img src="images/Logo blue.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
           <h3>Cadastro de produtos</h3>
           <p>Preencha as informações e cadastre seu produto para doação</p>
         </div>
