--- a/lista_produtos.html
+++ b/lista_produtos.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="card shadow-lg p-4" style="margin-top: 30px; border-radius: 20px;">
         <div class="text-center mb-4">
-          <img src="images/logo2.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
+          <img src="images/Logo blue.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
           <h3>Itens para doação</h3>
           <p>Veja abaixo os itens disponíveis e solicite aquele que precisar</p>
         </div>
