--- a/editar_produto.html
+++ b/editar_produto.html
@@ -46,7 +46,7 @@
       <div class="card shadow-lg p-4" style="max-width: 800px; width: 100%; margin-top: 30px; border-radius: 20px;">
         <!-- Logo e título centralizados -->
         <div class="text-center mb-4">
-          <img src="images/logo2.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
+          <img src="images/Logo blue.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;">
           <h3>Edição de Produto</h3>
           <p>Altere as informações e salve as mudanças</p>
         </div>
