--- a/about.html
+++ b/about.html
@@ -234,6 +234,111 @@
     </div>
   </section>
 
+
+
+
+
+
+  <section class="py-5 bg-light">
+    <div class="container">
+      <div class="text-center mb-4">
+        <h3 class="fw-bold">Nossas <span class="text-primary">Ações</span></h3>
+      </div>
+  
+      <div class="row g-4">
+        <!-- Card 1 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Catálogo Digital</h5>
+              <p class="card-text">Cadastro de alimentos excedentes com controle de origem, descrição e quantidade.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 2 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Solicitação Rápida</h5>
+              <p class="card-text">Beneficiários podem solicitar doações de forma imediata e prática.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 3 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Mapa Interativo</h5>
+              <p class="card-text">Visualização de pontos de coleta com geolocalização e rotas facilitadas.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 4 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Assistente Virtual</h5>
+              <p class="card-text">Atendimento com IA no WhatsApp e Web para suporte, triagem e orientações.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 5 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Plataforma Inclusiva</h5>
+              <p class="card-text">Acessível por celular, PC e mensageiros, alcançando comunidades com baixa conexão.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 6 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Arquitetura Moderna</h5>
+              <p class="card-text">Base tecnológica escalável com suporte a novas regiões e parceiros.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 7 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Gestão de Doações</h5>
+              <p class="card-text">Sistema simplificado para organizar e distribuir alimentos com agilidade.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 8 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Impacto Social</h5>
+              <p class="card-text">Tecnologia e solidariedade juntas no combate à fome e desperdício alimentar.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+
+
+
+  
+  
+
+
+  
+
   <!-- footer section -->
   <footer class="footer_section">
     <div class="container">
