ajuste na pagina index

--- a/about.html
+++ b/about.html
@@ -238,11 +238,11 @@
 
 
 
-
+  
   <section class="py-5 bg-light">
     <div class="container">
       <div class="text-center mb-4">
-        <h3 class="fw-bold">Nossas <span class="text-primary">Ações</span></h3>
+        <h3 class="fw-bold"><span class="text-primary">Funcionalidades da Plataforma</span></h3>
       </div>
   
       <div class="row g-4">
@@ -250,8 +250,8 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
-              <h5 class="card-title">Catálogo Digital</h5>
-              <p class="card-text">Cadastro de alimentos excedentes com controle de origem, descrição e quantidade.</p>
+              <h5 class="card-title">Parcerias com ONGs</h5>
+              <p class="card-text">Fortalecemos instituições locais para ampliar o alcance das doações e ações sociais.</p>
             </div>
           </div>
         </div>
@@ -260,8 +260,8 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
-              <h5 class="card-title">Solicitação Rápida</h5>
-              <p class="card-text">Beneficiários podem solicitar doações de forma imediata e prática.</p>
+              <h5 class="card-title">Rede Colaborativa</h5>
+              <p class="card-text">Integração entre doadores, voluntários e beneficiários para uma atuação em rede.</p>
             </div>
           </div>
         </div>
@@ -270,8 +270,8 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
-              <h5 class="card-title">Mapa Interativo</h5>
-              <p class="card-text">Visualização de pontos de coleta com geolocalização e rotas facilitadas.</p>
+              <h5 class="card-title">Inclusão Social</h5>
+              <p class="card-text">Plataforma acessível a todos, promovendo dignidade e combate à exclusão.</p>
             </div>
           </div>
         </div>
@@ -280,28 +280,28 @@
         <div class="col-md-6 col-lg-3 mb-4">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
-              <h5 class="card-title">Assistente Virtual</h5>
-              <p class="card-text">Atendimento com IA no WhatsApp e Web para suporte, triagem e orientações.</p>
+              <h5 class="card-title">Assistente Virtual com IA</h5>
+              <p class="card-text">Atendimento automatizado para orientar usuários e agilizar o processo de doação.</p>
             </div>
           </div>
         </div>
   
         <!-- Card 5 -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
-              <h5 class="card-title">Plataforma Inclusiva</h5>
-              <p class="card-text">Acessível por celular, PC e mensageiros, alcançando comunidades com baixa conexão.</p>
+              <h5 class="card-title">Suporte ao WhatsApp</h5>
+              <p class="card-text">Acompanhamento e cadastro via WhatsApp, facilitando o acesso para qualquer pessoa.</p>
             </div>
           </div>
         </div>
   
         <!-- Card 6 -->
-        <div class="col-md-6 col-lg-3">
+        <div class="col-md-6 col-lg-3 mb-4">
           <div class="card h-100 border-0 shadow-sm">
             <div class="card-body text-center">
-              <h5 class="card-title">Arquitetura Moderna</h5>
-              <p class="card-text">Base tecnológica escalável com suporte a novas regiões e parceiros.</p>
+              <h5 class="card-title">Tecnologias Envolvidas</h5>
+              <p class="card-text">Utilizamos Node.js, PHP, bancos de dados e inteligência artificial para escalar soluções.</p>
             </div>
           </div>
         </div>
@@ -332,7 +332,6 @@
 
 
 
-
   
   
 
@@ -344,7 +343,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">Ciclovida - PE</a>
       </p>
     </div>
   </footer>
