--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
   
       <!-- Seção das Ações -->
       <div class="text-center mb-4">
-        <h3 class="fw-bold">Nossas <span class="text-primary">Ações</span></h3>
+        <h3 class="fw-bold"><span class="text-primary">Integração com o portal da prefeitura do Recife</span></h3>
       </div>
       <div class="row g-4">
         <!-- Ação 1 -->
@@ -290,77 +290,125 @@
       </div>
     </div>
   </section>
-  
-  
-  
-  
-  
-  <!-- End treatment section -->
-  <!-- End team section -->
 
-  <!-- Client section -->
+
+
+  <section class="py-5 bg-light">
+    <div class="container">
+      <div class="text-center mb-4">
+        <h3 class="fw-bold"><span class="text-primary">Funcionalidades da Plataforma</span></h3>
+      </div>
+  
+      <div class="row g-4">
+        <!-- Card 1 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Parcerias com ONGs</h5>
+              <p class="card-text">Fortalecemos instituições locais para ampliar o alcance das doações e ações sociais.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 2 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Rede Colaborativa</h5>
+              <p class="card-text">Integração entre doadores, voluntários e beneficiários para uma atuação em rede.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 3 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Inclusão Social</h5>
+              <p class="card-text">Plataforma acessível a todos, promovendo dignidade e combate à exclusão.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 4 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Assistente Virtual com IA</h5>
+              <p class="card-text">Atendimento automatizado para orientar usuários e agilizar o processo de doação.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 5 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Suporte ao WhatsApp</h5>
+              <p class="card-text">Acompanhamento e cadastro via WhatsApp, facilitando o acesso para qualquer pessoa.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 6 -->
+        <div class="col-md-6 col-lg-3 mb-4">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Tecnologias Envolvidas</h5>
+              <p class="card-text">Utilizamos Node.js, PHP, bancos de dados e inteligência artificial para escalar soluções.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 7 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Gestão de Doações</h5>
+              <p class="card-text">Sistema simplificado para organizar e distribuir alimentos com agilidade.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 8 -->
+        <div class="col-md-6 col-lg-3">
+          <div class="card h-100 border-0 shadow-sm">
+            <div class="card-body text-center">
+              <h5 class="card-title">Impacto Social</h5>
+              <p class="card-text">Tecnologia e solidariedade juntas no combate à fome e desperdício alimentar.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  
+  
+  
+  
+  
+  
   <section class="client_section layout_padding">
     <div class="container">
       <div class="heading_container">
         <h2>
-          <span>Depoimentos</span>
+          <span>Produtos para Doação</span>
         </h2>
       </div>
     </div>
     <div class="container px-0">
-      <div id="customCarousel2" class="carousel carousel-fade" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <div class="box">
-              <div class="client_info">
-                <div class="client_name">
-                  <h5>Maria Silva</h5>
-                  <h6>Beneficiada pela iniciativa</h6>
-                </div>
-                <i class="fa fa-quote-left" aria-hidden="true"></i>
-              </div>
-              <p>
-                Graças às doações recebidas pelo projeto, consegui alimentar meus filhos em um momento muito difícil. Sou imensamente grata a todos que contribuem. Esse gesto de solidariedade faz toda a diferença.
-              </p>
-            </div>
-          </div>
-  
-          <div class="carousel-item">
-            <div class="box">
-              <div class="client_info">
-                <div class="client_name">
-                  <h5>Lucas Andrade</h5>
-                  <h6>Doador voluntário</h6>
-                </div>
-                <i class="fa fa-quote-left" aria-hidden="true"></i>
-              </div>
-              <p>
-                Sempre quis ajudar de alguma forma, e essa plataforma me deu a oportunidade perfeita. Saber que minha contribuição chegou a quem realmente precisa me dá um enorme sentimento de propósito.
-              </p>
-            </div>
-          </div>
-  
-          <div class="carousel-item">
-            <div class="box">
-              <div class="client_info">
-                <div class="client_name">
-                  <h5>Carla Menezes</h5>
-                  <h6>Voluntária do projeto</h6>
-                </div>
-                <i class="fa fa-quote-left" aria-hidden="true"></i>
-              </div>
-              <p>
-                Trabalhar com a equipe e ver o impacto das doações é emocionante. Cada alimento entregue carrega esperança. Convido todos a se envolverem — juntos, conseguimos transformar vidas.
-              </p>
-            </div>
-          </div>
+      <div id="produtoCarousel" class="carousel carousel-fade" data-ride="carousel">
+        <div class="carousel-inner" id="produtos-container">
+          <!-- Itens serão carregados aqui dinamicamente -->
         </div>
         <div class="carousel_btn-box">
-          <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#produtoCarousel" role="button" data-slide="prev">
             <i class="fa fa-angle-left" aria-hidden="true"></i>
             <span class="sr-only">Anterior</span>
           </a>
-          <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#produtoCarousel" role="button" data-slide="next">
             <i class="fa fa-angle-right" aria-hidden="true"></i>
             <span class="sr-only">Próximo</span>
           </a>
@@ -368,44 +416,13 @@
       </div>
     </div>
   </section>
+
+
+
   
   
   <!-- Contact section -->
-  <section class="contact_section layout_padding-bottom">
-    <div class="container">
-      <div class="heading_container">
-        <h2>Get In Touch</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-7">
-          <div class="form_container">
-            <form action="">
-              <div>
-                <input type="text" placeholder="Full Name" />
-              </div>
-              <div>
-                <input type="email" placeholder="Email" />
-              </div>
-              <div>
-                <input type="text" placeholder="Phone Number" />
-              </div>
-              <div>
-                <input type="text" class="message-box" placeholder="Message" />
-              </div>
-              <div class="btn_box">
-                <button>SEND</button>
-              </div>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-5">
-          <div class="img-box">
-            <img src="images/contact-img.jpg" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  
   <!-- End contact section -->
 
   <!-- Help Button -->
@@ -514,6 +531,9 @@
       localStorage.removeItem('usuarioLogado');
       window.location.href = 'login.html';
     }
+
+
+    
   </script>
 
   <!-- Chat Script -->
@@ -567,6 +587,56 @@
 
     // Update footer year
     document.getElementById('displayYear').textContent = new Date().getFullYear();
+
+
+
+
+
+
+
+
+
+
+
+
+
+    async function carregarProdutos() {
+    try {
+      const response = await axios.get('https://ciclovida.ki6.com.br/ciclovida/api_php/item.php');
+      const produtos = response.data;
+      const container = document.getElementById('produtos-container');
+
+      if (!produtos.length) {
+        container.innerHTML = '<div class="carousel-item active"><div class="box"><p>Nenhum produto disponível no momento.</p></div></div>';
+        return;
+      }
+
+      produtos.forEach((produto, index) => {
+        const ativo = index === 0 ? 'active' : '';
+        const html = `
+          <div class="carousel-item ${ativo}">
+            <div class="box">
+              <div class="client_info">
+                <div class="client_name">
+                  <h5>${produto.nome}</h5>
+                  <h6>Quantidade: ${produto.quantidade}</h6>
+                </div>
+                <i class="fa fa-gift" aria-hidden="true"></i>
+              </div>
+              <p>${produto.descricao || 'Sem descrição disponível.'}</p>
+            </div>
+          </div>
+        `;
+        container.insertAdjacentHTML('beforeend', html);
+      });
+    } catch (error) {
+      console.error('Erro ao carregar produtos:', error);
+      document.getElementById('produtos-container').innerHTML = '<div class="carousel-item active"><div class="box"><p>Erro ao carregar produtos.</p></div></div>';
+    }
+  }
+
+  document.addEventListener('DOMContentLoaded', carregarProdutos);
+  
   </script>
   <script src="js/headerLoader.js" defer></script>
 </body>
