--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
           <form id="chat-form" class="chat-input-group d-flex justify-content-center">
             <input id="user-input" type="text" class="form-control w-75 rounded-start-pill"
               placeholder="Pergunte alguma coisa..." aria-label="Mensagem do usuário">
-            <button id="send-btn" type="submit" class="btn btn-primary rounded-end-pill">
+            <button id="send-btn" type="submit" class="btn btn-info rounded-end-pill">
               <i class="fa fa-paper-plane" aria-hidden="true"></i>
             </button>
           </form>
@@ -636,7 +636,7 @@
   }
 
   document.addEventListener('DOMContentLoaded', carregarProdutos);
-  
+
   </script>
   <script src="js/headerLoader.js" defer></script>
 </body>
